Fixed CSS overlap spacing for layered sliding dialogs.

--- a/jui-ui/src/main/resources/com/effacy/jui/ui/client/modal/ModalDialog.css
+++ b/jui-ui/src/main/resources/com/effacy/jui/ui/client/modal/ModalDialog.css
@@ -136,6 +136,7 @@
 .component .dialog .body {
 	flex: 1;
 	overflow: auto;
+    position: relative;
 }
 
 .component .dialog .body .contents {
